--- a/Dockerfile.multi
+++ b/Dockerfile.multi
@@ -5,7 +5,7 @@ RUN mkdir /app
 WORKDIR /app
 
 ARG TARGETARCH
-COPY binaries/otp-server-linux-${TARGETARCH} ./server
+COPY binaries/server-linux-${TARGETARCH} ./server
 COPY binaries/admin-linux-${TARGETARCH} ./admin
 COPY binaries/migrate-linux-${TARGETARCH} ./migrate
 COPY start.sh ./start.sh
